--- a/templates/indexhtml.html
+++ b/templates/indexhtml.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>this is a test page</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab architecto consequatur consequuntur, cum, dignissimos id iusto labore libero magnam natus necessitatibus odio perferendis possimus quia recusandae, repellendus rerum vitae voluptatem.</p>
 
 </body>
 </html>
